<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>mar.core</groupId>
    <artifactId>snake</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>

    <modules>
        <module>snake-core</module>
        <module>snake-javafx</module>
    </modules>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>javafx</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>exec-maven-plugin</artifactId>
                            <version>1.6.0</version>
                            <executions>
                                <execution>
                                    <goals>
                                        <goal>java</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <executableDependency>
                                    <groupId>mar.core</groupId>
                                    <artifactId>snake-fx</artifactId>
                                </executableDependency>
                                <executable>java</executable>
                                <arguments>
                                    <argument>--module-path</argument> <!-- or -p  -->
                                    <!-- automatically creates the module path using all project dependencies,
                                         also adding the project build directory -->
                                    <modulepath/>
                                    <argument>--add-modules=javafx.controls,javafx.fxml</argument>
                                    <argument>-classpath</argument>
                                    <classpath/>
                                    <argument>com.mar.GameWindow</argument>
                                </arguments>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>